Fixed list of issues pointed out by boss

--- a/views/about.html
+++ b/views/about.html
@@ -63,7 +63,7 @@
       <div>
         <h3 class="accordian-heading accordion-new">To Suit Every Budget</h3>
         <p class="panel-new">
-          While most of our services demand a decent investment, we also recognize that sometimes great ideas don't have heavy financial support and money shouldn't be a reason to not chase after your dreams. We offer quality services and payment options to businesses with small budgets to give you a strong start. On that note, check our Pro-Bono Program here.
+          While most of our services demand a decent investment, we also recognize that sometimes great ideas don't have heavy financial support and money shouldn't be a reason to not chase after your dreams. We offer quality services and payment options to businesses with small budgets to give you a strong start. On that note, check our <a style="color: var(--amdBluePrimary);" href="https://forms.gle/3jFqjrBuvf9ronZK9">Pro-Bono Program</a> here.
         </p>
       </div>
     </div>
@@ -74,7 +74,7 @@
       <h2>We'll make a great team.</h2>
       <p>We're still taking projects for 2022. Schedule a FREE consultation call to discover how we can help transform your business.</p>
       <a class="button btn-primary">
-        Submit
+        Contact Us
       </a>
     </div>
     <div></div>
