--- a/views/home.html
+++ b/views/home.html
@@ -22,8 +22,10 @@
     <section
       class="flex-container"
     >
+      <!-- Replace by video -->
       <div>
-        <img src="/img/intro.png" />
+        <video autoplay muted loop src="/img/Homepage.mp4"></video>
+        <!-- <img src="/img/intro.png" /> -->
       </div>
       <div>
         <h1 style="color: var(--amdBlack); margin-bottom: 16px;">
