--- a/views/partials/contactFormModal.html
+++ b/views/partials/contactFormModal.html
@@ -52,13 +52,14 @@
         <div
           class="input-row"
         >
-          <input
+          <textarea rows=3 name="message" id="message" placeholder="What can we help you with? The more details, the better."></textarea>
+          <!-- <input
             id="message"
             name="message"
             type="text"
             placeholder="What can we help you with? The more details, the better."
             required
-          />
+          /> -->
         </div>
         <button type="submit" value="submit" class="button btn-primary">
           <span>
