--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -19,7 +19,7 @@
             <a href="/services">Services</a>
           </div>
           <div class="link-section link-sec2">
-            <a>Pro-Bono Program</a>
+            <a href="https://forms.gle/3jFqjrBuvf9ronZK9" target="_blank">Pro-Bono Program</a>
             <a href="/journal">Journal</a>
             <a class="modal-trigger-btn">Contact</a>
             <a>Privacy Policy</a>
