--- a/views/partials/scripts.html
+++ b/views/partials/scripts.html
@@ -67,7 +67,7 @@
 
   if (!modalSeen) {
     setTimeout(function() {
-      subcribeModal.style.display = "block";
+      // subcribeModal.style.display = "block";
       createCookie("modalSeen", true, 10);
     }, 5000);
   }
