--- a/views/services.html
+++ b/views/services.html
@@ -52,7 +52,7 @@
         <p>
           MAY INCLUDE :
         </p>
-        <div class="services-list">
+        <div class="services-list hide-xs">
           <ul>
             <li>Brand Strategy</li>
             <li>Market Research</li>
@@ -64,6 +64,20 @@
             <li>Stationary</li>
           </ul>
           <ul>
+            <li>Branded Templates</li>
+            <li>Brand Activation</li>
+          </ul>
+        </div>
+        <div class="services-list hide-lg">
+          <ul>
+            <li>Brand Strategy</li>
+            <li>Market Research</li>
+            <li>Visual Identity</li>
+            <li>Photography</li>
+          </ul>
+          <ul>
+            <li>Packaging</li>
+            <li>Stationary</li>
             <li>Branded Templates</li>
             <li>Brand Activation</li>
           </ul>
@@ -88,7 +102,7 @@
         <p>
           MAY INCLUDE :
         </p>
-        <div class="services-list">
+        <div class="services-list hide-xs">
           <ul>
             <li>Design</li>
             <li>Development</li>
@@ -98,6 +112,18 @@
             <li>Branded Image Templates</li>
           </ul>
           <ul>
+            <li>Basic SEO</li>
+            <li>Launch Support</li>
+          </ul>
+        </div>
+        <div class="services-list hide-lg">
+          <ul>
+            <li>Design</li>
+            <li>Development</li>
+            <li>Copywriting</li>
+          </ul>
+          <ul>
+            <li>Branded Image Templates</li>
             <li>Basic SEO</li>
             <li>Launch Support</li>
           </ul>
@@ -390,7 +416,7 @@
       </div>
     </div>
   </section>
-  <%- include("partials/contactForm.html", { text: "Looking for something else?", btnText: "Submit" }) %>
+  <%- include("partials/contactForm.html", { text: "Looking for something else?", btnText: "Contact Us" }) %>
   <%- include("partials/instaFeed.html") %>
   <section
     class="banner-section"
