--- a/views/journal.html
+++ b/views/journal.html
@@ -10,6 +10,20 @@
 </head>
 <body id="journal">
   <%- include("partials/header.html") %>
+  <%- include("partials/repeatedBanner.html",
+    {
+      text: "We are still onboarding projects for 2022.",
+      redirectTo: '',
+      type: "secondary"
+    }
+) %>
+  <!-- <%- include("partials/repeatedBanner.html",
+    {
+      text: "We are still onboarding projects for 2022.",
+      redirectTo: '',
+      type: "secondary"
+    }
+  ) %> -->
   <section class="intro-section">
     <div>
       <h1>Journal</h1>
@@ -36,7 +50,6 @@
       method="POST"
       action="send"
       enctype="multipart/form-data"
-      style="width: 80%;"
     >
       <div
         class="input-row"
