Video outline fixed | insta feed updated | transitions added | close button in modal

--- a/views/about.html
+++ b/views/about.html
@@ -73,7 +73,7 @@
     <div>
       <h2>We'll make a great team.</h2>
       <p>We're still taking projects for 2022. Schedule a FREE consultation call to discover how we can help transform your business.</p>
-      <a class="button btn-primary">
+      <a class="button btn-primary modal-trigger-btn">
         Contact Us
       </a>
     </div>
