--- a/views/partials/contactFormModal.html
+++ b/views/partials/contactFormModal.html
@@ -1,11 +1,13 @@
 <div id="myModal" class="modal">
-
   <!-- Modal content -->
   <div class="modal-content">
     <div class="hide-xs">
       <img src="/img/hire_us.png" />
     </div>
     <div class="form-section">
+      <div class="cross-btn" id="modal-close">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z" fill="rgba(177,180,180,1)"/></svg>
+      </div>
       <h2>Hire Us</h2>
       <p>
         We're taking projects for 2022. Fill up the form and we'll get back to you in a jiffy!
