--- a/views/partials/instaFeed.html
+++ b/views/partials/instaFeed.html
@@ -1,1 +1,25 @@
-<div class="tagembed-container" style=" width:100%;height:100%;overflow: auto;"><div class="tagembed-socialwall" data-wall-id="40409" view-url="https://widget.tagembed.com/40409?view">  </div> <script src="//widget.tagembed.com/embed.min.js" type="text/javascript"></script></div>
+<div id="instagram-feed-demo" class="instagram_feed"></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
+<script src="https://www.jqueryscript.net/demo/Instagram-Photos-Without-API-instagramFeed/jquery.instagramFeed.js"></script>
+<script>
+ (function($){
+		$(window).on('load', function(){
+			$.instagramFeed({
+				'username': 'addmoredesign_studio',
+				'container': "#instagram-feed-demo",
+				'display_profile': false,
+				'display_biography': false,
+				'display_gallery': true,
+				'get_raw_json': false,
+        'display_captions': true,
+				'callback': null,
+				'styling': true,
+				'items': 4,
+				'items_per_row': 4,
+				'margin': 0,
+        "lazy_load": true,
+        "styling": false
+			});
+		});
+	})(jQuery);
+  </script>
