--- a/views/partials/scripts.html
+++ b/views/partials/scripts.html
@@ -29,10 +29,14 @@
   // contact Form Modal
   const modalButton = document.getElementsByClassName("modal-trigger-btn");
   var modal = document.getElementById("myModal");
+  var modalClose = document.getElementById("modal-close");
   if (modalButton && modalButton.length > 0) {
     for (let i = 0; i < modalButton.length; i++) {
       modalButton[i].onclick = function(e) {
-        modal.style.display = "block";
+        modal.style.visibility = "visible";
+        modal.style.opacity = 1;
+        modal.style.height = "100vh";
+        console.log(modal);
       }
     }
   }
@@ -75,7 +79,9 @@
     // close modal on click outside
     window.onclick = function(e) {
     if (e.target === modal) {
-      modal.style.display = "none";
+      modal.style.visibility = "hidden";
+      modal.style.opacity = 0;
+      modal.style.height = 0;
     }
 
     if (e.target === subcribeModal) {
@@ -84,10 +90,25 @@
     // document.getElementById("sidebar").classList.toggle("collapsed");
   }
 
+  $("#modal-close").on("click", function(e) {
+    console.log(e);
+      modal.style.visibility = "hidden";
+      modal.style.opacity = 0;
+      modal.style.height = 0;
+    });
+
+    $("#modal-close").on("touchstart", function() {
+      modal.style.visibility = "hidden";
+      modal.style.opacity = 0;
+      modal.style.height = 0;
+    });
+
   // fallback method for ios to close modal on click outside
   window.ontouchstart = function(e) {
     if (e.target === modal) {
-      modal.style.display = "none";
+      modal.style.visibility = "hidden";
+      modal.style.opacity = 0;
+      modal.style.height = 0;
     }
 
     if (e.target === subcribeModal) {
