Sidebar faded background added | outside click to sidebar | image to take width as per aspect | cursor fixed | thumbnails added correctly

--- a/views/about.html
+++ b/views/about.html
@@ -9,6 +9,7 @@
   <link href="/about.css" rel="stylesheet">
 </head>
 <body id="about">
+  <%- include("partials/cursor.html") %>
   <%- include("partials/header.html") %>
   <%- include("partials/repeatedBanner.html",
       {
@@ -51,7 +52,7 @@
       <div>
         <h3 class="accordian-heading accordion-new">Strong ethos</h3>
         <p class="panel-new">
-          We do stuff that has a reason behind it. ‘Because everyone is doing it’ doesn’t cut it for us. We envision making way for better representation, to make design more accessible, to help create brands with strong core values, and to help us be more intentional in our lives. If you want to introduce something heartfelt into the world, we’d love to talk to you. Read about our brand ethos in detail here.
+          We do stuff that has a reason behind it. ‘Because everyone is doing it’ doesn’t cut it for us. We envision making way for better representation, to make design more accessible, to help create brands with strong core values, and to help us be more intentional in our lives. If you want to introduce something heartfelt into the world, we’d love to talk to you. Read about our brand ethos in detail <a style="color: var(--amdBluePrimary);" href="/journal/1">here</a>.
         </p>
       </div>
       <div>
@@ -63,7 +64,7 @@
       <div>
         <h3 class="accordian-heading accordion-new">To Suit Every Budget</h3>
         <p class="panel-new">
-          While most of our services demand a decent investment, we also recognize that sometimes great ideas don't have heavy financial support and money shouldn't be a reason to not chase after your dreams. We offer quality services and payment options to businesses with small budgets to give you a strong start. On that note, check our <a style="color: var(--amdBluePrimary);" href="https://forms.gle/3jFqjrBuvf9ronZK9">Pro-Bono Program</a> here.
+          While most of our services demand a decent investment, we also recognize that sometimes great ideas don't have heavy financial support and money shouldn't be a reason to not chase after your dreams. We offer quality services and payment options to businesses with small budgets to give you a strong start. On that note, check our Pro-Bono Program <a style="color: var(--amdBluePrimary);" href="https://forms.gle/3jFqjrBuvf9ronZK9">here</a>.
         </p>
       </div>
     </div>
