--- a/views/home.html
+++ b/views/home.html
@@ -11,6 +11,7 @@
   </head>
   <body id="home">
     <!-- Intro Section -->
+    <%- include("partials/cursor.html") %>
     <%- include("partials/header.html") %>
     <%- include("partials/repeatedBanner.html",
       {
