--- a/views/journal.html
+++ b/views/journal.html
@@ -9,6 +9,7 @@
   <link href="/journal.css" rel="stylesheet">
 </head>
 <body id="journal">
+  <%- include("partials/cursor.html") %>
   <%- include("partials/header.html") %>
   <%- include("partials/repeatedBanner.html",
     {
