--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -22,7 +22,7 @@
             <a href="https://forms.gle/3jFqjrBuvf9ronZK9" target="_blank">Pro-Bono Program</a>
             <a href="/journal">Journal</a>
             <a class="modal-trigger-btn">Contact</a>
-            <a>Privacy Policy</a>
+            <!-- <a>Privacy Policy</a> -->
           </div>
         </div>
         <div class="footer-form">
