--- a/views/services.html
+++ b/views/services.html
@@ -10,6 +10,8 @@
   <link href="/about.css" rel="stylesheet">
 </head>
 <body id="services">
+  <%- include("partials/cursor.html") %>
+
   <%- include("partials/header.html") %>
   <%- include("partials/repeatedBanner.html",
     {
