--- a/views/work.html
+++ b/views/work.html
@@ -9,6 +9,8 @@
     <link href="/work.css" rel="stylesheet">
   </head>
   <body id="work">
+    <%- include("partials/cursor.html") %>
+
     <!-- Intro Section -->
     <%- include("partials/header.html") %>
     <%- include("partials/repeatedBanner.html",
