--- a/views/post.html
+++ b/views/post.html
@@ -10,6 +10,8 @@
 
 </head>
 <body id="post">
+  <%- include("partials/cursor.html") %>
+
   <%- include("partials/header.html") %>
   <%- include("partials/repeatedBanner.html",
     {
