--- a/views/projects.html
+++ b/views/projects.html
@@ -10,6 +10,8 @@
 <!--[if (lt IE 9)]><script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.helper.ie8.js"></script><![endif]-->
   </head>
   <body id="project">
+    <%- include("partials/cursor.html") %>
+
     <!-- Intro Section -->
     <%- include("partials/header.html") %>
     <%- include("partials/repeatedBanner.html", { text: "We are still onboarding projects for 2022.", redirectTo: "", type: "secondary" }) %>
@@ -57,6 +59,7 @@
         <div class="img-block">
           <% if(data.gallery[i].includes(".mp4")) { %>
             <video
+              class="img-block__video"
               src="/img<%= data.gallery[i] %>"
               loop
               muted
@@ -65,7 +68,7 @@
               style="width: 100%; height: 100%;"
             />
           <% } else { %>
-            <img src="/img/<%= data.gallery[i] %>" />
+            <img class="work-img" src="/img/<%= data.gallery[i] %>" />
           <% } %>
         </div>
       <% } %>
@@ -90,5 +93,23 @@
     </section>
     <%- include("partials/footer.html") %>
     <%- include("partials/scripts.html") %>
+    <script>
+      window.addEventListener('load', function () {
+        var images = document.getElementsByClassName("work-img");
+        for (var i = 0; i < images.length; i++) {
+          if (images[i].naturalWidth === 2000) {
+            images[i].parentNode.classList.add("img-block-full");
+          } else {
+            images[i].parentNode.classList.add("img-block-half");
+          }
+        }
+        var videos = document.getElementsByClassName("img-block__video");
+        for (var i = 0; i < videos.length; i++) {
+          if (videos[i].videoWidth === 2000) {
+            videos[i].parentNode.classList.add("img-block-full");
+          }
+        }
+      })
+    </script>
   </body>
 </html>
