--- a/views/partials/contactFormModal.html
+++ b/views/partials/contactFormModal.html
@@ -64,7 +64,7 @@
           /> -->
         </div>
         <button type="submit" value="submit" class="button btn-primary">
-          <span>
+          <span class="span-btn">
             Submit
           </span>
         </button>
