--- a/views/partials/cursor.html
+++ b/views/partials/cursor.html
@@ -28,13 +28,13 @@ window.addEventListener('load', e => {
  });
 
 document.addEventListener('mouseover', e => {
-  if (e.target && (e.target.matches('a') || e.target.matches('button'))) {
+  if (e.target && (e.target.matches('a') || e.target.matches('button') || e.target.matches('.anchor-img') || e.target.matches('.span-btn'))) {
     cursor.classList.add('cursor--grow');
   }
 });
 
 document.addEventListener('mouseout', e => {
-  if (e.target && ((e.target.matches('a')) || e.target.matches('button'))) {
+  if (e.target && ((e.target.matches('a')) || e.target.matches('button') || e.target.matches('.anchor-img') || e.target.matches('.span-btn'))) {
     cursor.classList.remove('cursor--grow');
   }
 });
