--- a/views/services.html
+++ b/views/services.html
@@ -36,13 +36,13 @@
   >
     <h2>Primary Services</h2>
     <div class="tabs">
-      <div class="tab active" onclick="toggleTab('branding', this)">
+      <div class="tab span-btn active" onclick="toggleTab('branding', this)">
         Branding
       </div>
-      <div class="tab" onclick="toggleTab('websites', this)">
+      <div class="tab span-btn" onclick="toggleTab('websites', this)">
         Website
       </div>
-      <div class="tab" onclick="toggleTab('social-media', this)">
+      <div class="tab span-btn" onclick="toggleTab('social-media', this)">
         Social Media
       </div>
     </div>
