--- a/views/partials/repeatedBanner.html
+++ b/views/partials/repeatedBanner.html
@@ -7,26 +7,26 @@
     "
     class="marquee <% if (!redirectTo) { %> modal-trigger-btn <% } %>">
     <div class="marquee__inner" aria-hidden="true">
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
-      <span>  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
+      <span class="span-btn">  <%= text %>&nbsp; |&nbsp; </span>
     </div>
   </div>
 </section>
