--- a/views/home.html
+++ b/views/home.html
@@ -99,6 +99,16 @@
         <div class="testimonials-slider">
           <div class="slider-item">
             <div class="testimonial-right">
+              <h3>Jaideep Panjwani</h3>
+              <p class="designation noselect" >Co-Founder, Elio</p>
+              <p class="noselect">
+                "Working with Kumud is like working with the extremely intelligent director of design, who knows EXACTLY how to decipher your brand's future aesthetics. Add More Design is a great studio. I love their highly researched design inputs on my brand, which was something that had been lacking in my business before this point. This is not something I'd easily say for anyone who has worked with me before."
+              </p>
+            </div>
+          </div>
+
+          <div class="slider-item">
+            <div class="testimonial-right">
               <h3>Aaliya Kanuga</h3>
               <p class="designation noselect" >Co-Founder, Bollycoin</p>
               <p class="noselect">
@@ -184,7 +194,7 @@
           class="input-row"
         >
           <input
-            placeholder="Your Name & Pronouns"
+            placeholder="Your Name"
           />
           <input
             placeholder="Your Email Address"
