--- a/views/journal.html
+++ b/views/journal.html
@@ -56,7 +56,7 @@
         class="input-row"
       >
         <input
-          placeholder="Your Name & Pronouns"
+          placeholder="Your Name"
           name="name"
           required
           type="text"
