--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -24,7 +24,7 @@
       <li>
         <a href="/journal">Journal</a>
       </li>
-      <li>
+      <li class="contact-btn-sidebar">
         <a class="modal-trigger-btn">Contact</a>
       </li>
     </ul>
