--- a/views/partials/subscribeFormModal.html
+++ b/views/partials/subscribeFormModal.html
@@ -20,7 +20,7 @@
           class="input-row"
         >
           <input
-            placeholder="Your Name & Pronouns"
+            placeholder="Your Name"
             id="name"
             name="name"
             type="text"
