--- a/views/about.html
+++ b/views/about.html
@@ -23,7 +23,7 @@
   >
     <div>
       <h1 class="hide-lg">Hey you. It's nice to see you here.</h1>
-      <img src="/img/about.png" />
+      <img src="/img/about-new.png" />
       <div class="about-text">
         <h1 class="hide-xs">Hey you. It's nice to see you here.</h1>
         <p>
