--- a/views/post.html
+++ b/views/post.html
@@ -41,7 +41,7 @@
     </div>
   </section>
   <section class="post-cover">
-    <div style="background-image: url('/img/<%= post.coverImage %>')"></div>
+    <div style="background-position-y: center; background-image: url('/img/<%= post.coverImage %>')"></div>
   </section>
 
   <p class="hide-lg">
@@ -74,13 +74,13 @@
     <!-- <a style="visibility: <% if(post.prev) { %> visible; <% } else { %>hidden;<% } %>" href="<%= post.prev %>" class="button btn-secondary">Prev</a> -->
     <div class="social-share">
       <p style="color: var(--amdBluePrimary); margin-right: 56px; font-size: 16px;">Share</p>
-      <p onclick="onshare('fb')">
+      <p class="social-share-icon" onclick="onshare('fb')">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M13 19.938A8.001 8.001 0 0 0 12 4a8 8 0 0 0-1 15.938V14H9v-2h2v-1.654c0-1.337.14-1.822.4-2.311A2.726 2.726 0 0 1 12.536 6.9c.382-.205.857-.328 1.687-.381.329-.021.755.005 1.278.08v1.9H15c-.917 0-1.296.043-1.522.164a.727.727 0 0 0-.314.314c-.12.226-.164.45-.164 1.368V12h2.5l-.5 2h-2v5.938zM12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10z"/></svg>
       </p>
-      <p onclick="onshare('twitter')">
+      <p class="social-share-icon" onclick="onshare('twitter')">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M22.162 5.656a8.384 8.384 0 0 1-2.402.658A4.196 4.196 0 0 0 21.6 4c-.82.488-1.719.83-2.656 1.015a4.182 4.182 0 0 0-7.126 3.814 11.874 11.874 0 0 1-8.62-4.37 4.168 4.168 0 0 0-.566 2.103c0 1.45.738 2.731 1.86 3.481a4.168 4.168 0 0 1-1.894-.523v.052a4.185 4.185 0 0 0 3.355 4.101 4.21 4.21 0 0 1-1.89.072A4.185 4.185 0 0 0 7.97 16.65a8.394 8.394 0 0 1-6.191 1.732 11.83 11.83 0 0 0 6.41 1.88c7.693 0 11.9-6.373 11.9-11.9 0-.18-.005-.362-.013-.54a8.496 8.496 0 0 0 2.087-2.165z"/></svg>
       </p>
-      <p onclick="onshare('linkedin')">
+      <p class="social-share-icon" onclick="onshare('linkedin')">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M18.335 18.339H15.67v-4.177c0-.996-.02-2.278-1.39-2.278-1.389 0-1.601 1.084-1.601 2.205v4.25h-2.666V9.75h2.56v1.17h.035c.358-.674 1.228-1.387 2.528-1.387 2.7 0 3.2 1.778 3.2 4.091v4.715zM7.003 8.575a1.546 1.546 0 0 1-1.548-1.549 1.548 1.548 0 1 1 1.547 1.549zm1.336 9.764H5.666V9.75H8.34v8.589zM19.67 3H4.329C3.593 3 3 3.58 3 4.297v15.406C3 20.42 3.594 21 4.328 21h15.338C20.4 21 21 20.42 21 19.703V4.297C21 3.58 20.4 3 19.666 3h.003z"/></svg>
       </p>
     </div>
@@ -99,7 +99,7 @@
         class="input-row"
       >
         <input
-          placeholder="Your Name & Pronouns"
+          placeholder="Your Name"
           name="name"
           required
           type="text"
