--- a/views/partials/instaFeed.html
+++ b/views/partials/instaFeed.html
@@ -1,6 +1,6 @@
-<div id="instagram-feed-demo" class="instagram_feed"></div>
+<!-- <div id="instagram-feed-demo" class="instagram_feed"></div> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
-<script src="https://www.jqueryscript.net/demo/Instagram-Photos-Without-API-instagramFeed/jquery.instagramFeed.js"></script>
+<!-- <script src="https://www.jqueryscript.net/demo/Instagram-Photos-Without-API-instagramFeed/jquery.instagramFeed.js"></script>
 <script>
  (function($){
 		$(window).on('load', function(){
@@ -25,4 +25,4 @@
 			console.log('error', e)
 		});
 	})(jQuery);
-  </script>
+  </script> -->
