--- a/views/home.html
+++ b/views/home.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="p:domain_verify" content="bde6944913014027453acf5059fa55db"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add More Designs</title>
@@ -190,33 +191,53 @@
         </div>
       </div>
       <div>
-        <div
-          class="input-row"
+        <form
+          id="home-form"
+          method="POST"
+          action="send"
+          enctype="multipart/form-data"
         >
-          <input
-            placeholder="Your Name"
-          />
-          <input
-            placeholder="Your Email Address"
-          />
-        </div>
-        <div
-          class="input-row"
-        >
-          <input
-            placeholder="Your website / Instagram or any other link"
-          />
-        </div>
-        <div
-          class="input-row"
-        >
-          <input
-            placeholder="What can we help you with? The more details, the better."
-          />
-        </div>
-        <a class="button btn-primary">
-          Submit
-        </a>
+          <div
+            class="input-row"
+          >
+            <input
+              placeholder="Your Name"
+              id="name"
+              name="name"
+              type="text"
+              required
+            />
+            <input
+              placeholder="Your Email Address"
+              id="email"
+              name="email"
+              type="email"
+              required
+            />
+          </div>
+          <div
+            class="input-row"
+          >
+            <input
+              placeholder="Your website / Instagram or any other link"
+              id="website"
+              name="website"
+              type="text"
+            />
+          </div>
+          <div
+            class="input-row"
+          >
+            <input
+              placeholder="What can we help you with? The more details, the better."
+              name="message"
+              id="message"
+            />
+          </div>
+          <button type="submit" value="submit" class="button btn-primary">
+            Submit
+          </button>
+        </form>
       </div>
     </section>
     <%- include("partials/instaFeed.html") %>
@@ -228,6 +249,24 @@
     </section>
     
     <%- include("partials/footer.html") %>
+    <script>
+      const homeform = document.getElementById("home-form");
+      homeform.addEventListener("submit", (e) => {
+        e.preventDefault();
+        let mail = new FormData(homeform);
+        fetch("/api/save-details", {
+          method: "POST",
+          body: mail
+        })
+        .then((response) => {
+          return response.json();
+        })
+        .then((data) => console.log(data))
+        .catch((err) => {
+          console.log(err);
+        })
+      });
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script>
       var slider = tns({
