--- a/views/post.html
+++ b/views/post.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="p:domain_verify" content="bde6944913014027453acf5059fa55db"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Journal | Add More Design</title>
