--- a/views/work.html
+++ b/views/work.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="p:domain_verify" content="bde6944913014027453acf5059fa55db"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work | Add More Designs</title>
@@ -41,7 +42,7 @@
     </section>
     
     <%- include("partials/footer.html") %>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script> -->
     
     <%- include("partials/scripts.html") %>
   </body>
