--- a/views/about.html
+++ b/views/about.html
@@ -5,7 +5,7 @@
   <meta name="p:domain_verify" content="bde6944913014027453acf5059fa55db"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | Add More Designs</title>
+  <title>About | Add More Design</title>
   <%- include("partials/styles.html") %>
   <link href="/about.css" rel="stylesheet">
 </head>
