Adding heroku API to connect for mailer

--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -80,8 +80,11 @@
     <script>
 
       const subscribeNewsLetter = (formData) => {
-        fetch("/api/subscribe", {
+        fetch("https://stormy-badlands-97380.herokuapp.com/mail/subscribe", {
           method: "POST",
+          headers: {
+            'Access-Control-Request-Private-Network': 'true'
+          },
           body: formData
         })
         .then((respnse) => {
