live API integration for emailers

--- a/views/partials/scripts.html
+++ b/views/partials/scripts.html
@@ -128,7 +128,7 @@
 
   // send contact form data
   const sendDetails = (mail) => {
-    fetch("http://localhost:8000/mail/save-details", {
+    fetch("https://stormy-badlands-97380.herokuapp.com/mail/save-details", {
       method: "POST",
       body: mail
     })
