--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -25,6 +25,7 @@
               <a href="/">Home</a>
               <a href="/about">About</a>
               <a href="/work">Work</a>
+              <a href="/work">Work</a>
             </div>
             <div class="link-section link-sec2">
               <a href="/services">Services</a>
