--- a/views/about.html
+++ b/views/about.html
@@ -14,7 +14,7 @@
   <%- include("partials/header.html") %>
   <%- include("partials/repeatedBanner.html",
       {
-        text: "We are still onboarding projects for 2022.",
+        text: "Click here to launch your project by valentines 2023.",
         redirectTo: '',
         type: "secondary"
       }
@@ -74,7 +74,7 @@
   <section class="book-section">
     <div>
       <h2>We'll make a great team.</h2>
-      <p>We're still taking projects for 2022. Schedule a FREE consultation call to discover how we can help transform your business.</p>
+      <p>We're still taking projects for 2023. Schedule a FREE consultation call to discover how we can help transform your business.</p>
       <a class="button btn-primary modal-trigger-btn">
         Contact Us
       </a>
