--- a/views/journal.html
+++ b/views/journal.html
@@ -14,14 +14,14 @@
   <%- include("partials/header.html") %>
   <%- include("partials/repeatedBanner.html",
     {
-      text: "We are still onboarding projects for 2022.",
+      text: "Click here to launch your project by Valentines 2023",
       redirectTo: '',
       type: "secondary"
     }
 ) %>
   <!-- <%- include("partials/repeatedBanner.html",
     {
-      text: "We are still onboarding projects for 2022.",
+      text: "Click here to launch your project by Valentines 2023",
       redirectTo: '',
       type: "secondary"
     }
