--- a/views/projects.html
+++ b/views/projects.html
@@ -15,7 +15,7 @@
 
     <!-- Intro Section -->
     <%- include("partials/header.html") %>
-    <%- include("partials/repeatedBanner.html", { text: "We are still onboarding projects for 2022.", redirectTo: "", type: "secondary" }) %>
+    <%- include("partials/repeatedBanner.html", { text: "Click here to launch your project by Valentines 2023", redirectTo: "", type: "secondary" }) %>
     <section
       class="project-cover"
     >
