--- a/views/home.html
+++ b/views/home.html
@@ -16,7 +16,7 @@
     <%- include("partials/header.html") %>
     <%- include("partials/repeatedBanner.html",
       {
-        text: "We are still onboarding projects for 2023.",
+        text: "Click here to launch your project by Valentines 2023.",
         redirectTo: '',
         type: "secondary"
       }
