--- a/views/about.html
+++ b/views/about.html
@@ -14,7 +14,7 @@
   <%- include("partials/header.html") %>
   <%- include("partials/repeatedBanner.html",
       {
-        text: "Click here to launch your project by valentines 2023.",
+        text: "Click here to launch your project by Holi 2023.",
         redirectTo: '',
         type: "secondary"
       }
