--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -12,7 +12,7 @@
         </div>
         <h3>
           <a href="/project/<%= projects[i].id %>">
-            <%= projects[i].name %>
+            <%- projects[i].name %>
           </a>
         </h3>
         <p>
