--- a/views/projects.html
+++ b/views/projects.html
@@ -24,7 +24,7 @@
     <section class="client-intro">
       <div class="client-details">
         <h3>
-          <%= data.clientDetails.name %>
+          <%- data.clientDetails.name %>
         </h3>
         <p>
           <%= data.clientDetails.year %>
@@ -48,10 +48,10 @@
       </div>
       <div class="client-description">
         <h1>
-          <%= data.heading %>
+          <%- data.heading %>
         </h1>
         <p>
-          <%= data.description %>
+          <%- data.description %>
         </p>
       </div>
     </section>
