Banner text updated | footer text updated | testimonial added

--- a/views/home.html
+++ b/views/home.html
@@ -16,7 +16,7 @@
     <%- include("partials/header.html") %>
     <%- include("partials/repeatedBanner.html",
       {
-        text: "Click here to launch your project by Holi 2023.",
+        text: "Click here to launch your brand by Holi 2023.",
         redirectTo: '',
         type: "secondary"
       }
@@ -135,6 +135,16 @@
               <p class="noselect">
                 “She listened to our ideas, asked questions about what we were trying to accomplish, and really made sure that she understood our goals before getting to work, and we were extremely pleased with the outcome.
                 We would absolutely recommend her to anyone and would definitely work with her again!”
+              </p>
+            </div>
+          </div>
+
+          <div class="slider-item">
+            <div class="testimonial-right">
+              <h3>Holly Ash Greenwald</h3>
+              <p class="designation noselect" >Founder, The Careful Health Company<sup>TM</sup></p>
+              <p class="noselect">
+                “As a designer-entrepreneur running her own agency, Kumud understands perspectives of both business owner and client. According, she is highly articulate and excels in areas of management and communications.”
               </p>
             </div>
           </div>
