--- a/views/journal.html
+++ b/views/journal.html
@@ -14,14 +14,14 @@
   <%- include("partials/header.html") %>
   <%- include("partials/repeatedBanner.html",
     {
-      text: "Click here to launch your project by Holi 2023.",
+      text: "Click here to launch your brand by Holi 2023.",
       redirectTo: '',
       type: "secondary"
     }
 ) %>
   <!-- <%- include("partials/repeatedBanner.html",
     {
-      text: "Click here to launch your project by Valentines 2023",
+      text: "Click here to launch your brand by Valentines 2023",
       redirectTo: '',
       type: "secondary"
     }
