--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -35,7 +35,7 @@
             </div>
           </div>
           <div class="promo-text">
-            Starting July 2022, 2% of our monthly earnings go to LGBTQIA+ people via different NGOs.
+            2% of our monthly earnings go to LGBTQIA+ people via different NGOs.
           </div>
         </div>
         <div class="footer-form">
