--- a/views/post.html
+++ b/views/post.html
@@ -16,7 +16,7 @@
   <%- include("partials/header.html") %>
   <%- include("partials/repeatedBanner.html",
     {
-      text: "Click here to launch your project by Holi 2023.",
+      text: "Click here to launch your brand by Holi 2023.",
       redirectTo: '',
       type: "secondary"
     }
