--- a/views/partials/styles.html
+++ b/views/partials/styles.html
@@ -1,2 +1,3 @@
+<link rel="icon" type="image/x-icon" href="/img/amd_logo.ico">
 <link href="/colors.css" rel="stylesheet">
 <link href="/common.css" rel="stylesheet">
