Refactored partials to header | removed repeated banner from head

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,3 +1,5 @@
+
+<%- include("cursor.html") %>
 <div class="header">
   <img class="sidebar-toggle" src="/img/nav_button.png" />
 </div>
@@ -33,3 +35,10 @@
 </div>
 <%- include("contactFormModal.html") %>
 <%- include("subscribeFormModal.html") %>
+<!-- <%- include("partials/repeatedBanner.html",
+  {
+    text: "Click here to launch your brand by Holi 2023.",
+    redirectTo: '',
+    type: "secondary"
+  }
+) %> -->
