Fixed parial import

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -35,7 +35,7 @@
 </div>
 <%- include("contactFormModal.html") %>
 <%- include("subscribeFormModal.html") %>
-<!-- <%- include("partials/repeatedBanner.html",
+<!-- <%- include("repeatedBanner.html",
   {
     text: "Click here to launch your brand by Holi 2023.",
     redirectTo: '',
