--- a/views/partials/styles.html
+++ b/views/partials/styles.html
@@ -1,3 +1,4 @@
 <link rel="icon" type="image/x-icon" href="/img/amd_logo.ico">
 <link href="/colors.css" rel="stylesheet">
 <link href="/common.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
