--- a/views/partials/scripts.html
+++ b/views/partials/scripts.html
@@ -127,12 +127,13 @@
   }
 
   // send contact form data
-  const sendDetails = (mail) => {
+  const sendDetails = (mail, form) => {
     fetch("https://amd-email-service.onrender.com/mail/save-details", {
       method: "POST",
       body: mail
     })
     .then((response) => {
+      sendToastAndClear(form)
       return response.json();
     })
     .then((data) => {
@@ -158,7 +159,7 @@
   form.addEventListener("submit", (e) => {
     e.preventDefault();
     let mail = new FormData(form);
-    sendDetails(mail);
+    sendDetails(mail, form);
   })
 </script>
 
