--- a/views/partials/scripts.html
+++ b/views/partials/scripts.html
@@ -155,12 +155,12 @@
 
   // const btn = document.getElementById("submit");
   // btn.addEventListener("click", sendDetails);
-  const form = document.getElementById("contact-form");
-  form.addEventListener("submit", (e) => {
-    e.preventDefault();
-    let mail = new FormData(form);
-    sendDetails(mail, form);
-  })
+  // const form = document.getElementById("contact-form");
+  // form.addEventListener("submit", (e) => {
+  //   e.preventDefault();
+  //   let mail = new FormData(form);
+  //   sendDetails(mail, form);
+  // })
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
